# atari_world_model

./: .gitignore  README.md  config.yaml  config_autoencoder.yaml  design.md  pyproject.toml
reports/: 20260221_153239_coinrun.md
src/: config.py  eval.py  train.py  train_autoencoder.py
src/dataset/: generate_dataset.py  offline_dataset.py
src/envs/: atari_wrappers.py  procgen_wrappers.py
src/metrics/: __init__.py  image_quality.py  rollout.py
src/models/: __init__.py  conv_autoencoder.py  registry.py  world_model.py
src/utils/: contracts.py  io.py  metrics.py  seed.py  train_utils.py  video.py
tests/: test_contracts.py  test_conv_autoencoder.py  test_dataset.py  test_metrics.py  test_model.py  test_registry.py  test_rollout.py  test_train_autoencoder.py
