[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atari_world_model"
version = "0.1.0"
description = "Offline Atari action-conditioned next-frame prediction world model"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mayavan" }]
keywords = ["atari", "world-model", "offline", "pytorch"]

dependencies = [
  "numpy>=1.26",
  "torch>=2.2",
  "gymnasium>=0.29.1",
  "ale-py>=0.11.2",
  "autorom[accept-rom-license]>=0.6.1",
  "imageio>=2.34",
  "imageio-ffmpeg>=0.4.9",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "wandb>=0.16.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
